--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ html body {
   color: #787878;
 }
 .header .container .button:hover {
-  background-color: #2819b6;
+  background-color: #21639c;
 }
 .header .container .button {
   background-color: #337ab7;
@@ -154,10 +154,12 @@ html body {
   width: 50%;
 }
 .main .main_container .main_content .left .course {
+  font-family: "Open Sans";
   margin-top: 215px;
   margin-bottom: 25px;
   text-align: center;
-  font-size: 25px;
+  font-weight: 600;
+  word-spacing: 4px;
   color: #333333;
 }
 .main .main_container .main_content .left .text {
@@ -245,6 +247,8 @@ html body {
   margin-bottom: 7px;
 }
 .main .main_container .main_content #feed form h2 {
+  font-weight: 600;
+  word-spacing: 4px;
   margin-top: -30px;
   color: #333333;
   font-size: 23px;
@@ -275,12 +279,6 @@ html body {
   text-align: center;
   margin-top: 20px;
 }
-.build_container .build_title h2 {
-  font-family: "Open Sans", "Light 300";
-  font-weight: 400;
-  font-size: 30px;
-  color: #333333;
-}
 .build_container .build_content {
   display: flex;
   align-items: center;
@@ -302,7 +300,7 @@ html body {
 .build_container .build_content .site_block1 .icon1 h2 {
   font-family: "Open Sans", "Light 300";
   font-weight: 400;
-  color: #787878;
+  color: #333333;
   font-size: 22px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -331,7 +329,7 @@ html body {
 .build_container .build_content .site_block2 .icon2 h2 {
   font-family: "Open Sans", "Light 300";
   font-weight: 400;
-  color: #787878;
+  color: #333333;
   font-size: 22px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -360,7 +358,7 @@ html body {
 .build_container .build_content .site_block3 .icon3 h2 {
   font-family: "Open Sans", "Light 300";
   font-weight: 400;
-  color: #787878;
+  color: #333333;
   font-size: 22px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -440,14 +438,14 @@ html body {
 
 .slider_container {
   width: 100%;
-  background-color: #337ab7;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 .slider_content {
   margin: 0 auto;
   width: 1120px;
-  height: 530px;
-  background-color: red;
 }
 
 .slider__item {
@@ -527,7 +525,7 @@ html body {
   text-align: center;
   margin-bottom: 0;
   color: #787878;
-  font-family: "Open Sans" regular;
+  font-family: "Open Sans";
   font-size: 16px;
 }
 .video_wrapper .video_content .video {
