--- a/style.scss
+++ b/style.scss
@@ -43,6 +43,7 @@ html body{
 }
 .header{
     width: 100%;
+    position: fixed;
     height: 100px;
     background-color: white;
     box-shadow: 0 4px 7px -6px #222;
@@ -83,6 +84,166 @@ html body{
         }
     }
 }
+/*deleted after*/
+header .header2{
+    display: none;
+}
+.header2{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+}
+.header2::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    z-index: 2;
+}
+
+
+.header__body{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+}
+.header__logo{
+    flex: 0 0 60px;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    z-index: 3;
+}
+
+.header__logo img{
+    max-width: 100%;
+    display: block;
+}
+
+.header__burger{
+    display: none;
+}
+.header__menu{}
+
+.header__list{
+    display: flex;
+    position: relative;
+    z-index: 2;
+}
+.header__list li{
+    list-style: none;
+    margin: 0px 0px 0px 20px;
+}
+.header__link{
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+
+@media (max-width:767px){
+    body.lock{
+        overflow: hidden;
+    }
+    .header{
+        display: none;
+    }
+    .header__body{
+        height: 50px;}
+    .header__logo{
+        flex: 0 0 40px;
+    }
+    .header__burger{
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        position: relative;
+        z-index: 3 ;
+    }
+    .header__burger span{
+        position: absolute;
+        background-color: #fff;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        top: 9px;
+        transition: all 0.3s ease 0s;
+    }
+    .header__burger:before,
+    .header__burger:after{
+        content: '';
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        transition: all 0.3s ease 0s;
+    }
+    .header__burger:before{
+        top: 0;
+    }
+    .header__burger:after{
+        bottom: 0;
+    }
+    .header__burger.active span{
+        transform: scale(0);
+    }
+    .header__burger.active:before{
+        transform: rotate(45deg);
+        top: 9px;
+    }
+    .header__burger.active:after{
+        transform: rotate(-45deg);
+        bottom: 9px;
+    }
+    .header__menu{
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        overflow: auto;
+        transition: all 0.3s ease 0s;
+        background-color: #0b76ef;
+        padding: 70px 10px 20px 10px;
+    }
+
+    .header__menu.active{
+        top: 0;
+    }
+    .header__list{
+        display: block;
+    }
+    .header__list li{
+       margin: 0px 0px 20px 0px; 
+    }
+    .header__link{
+        font-size: 24px;
+    }
+}
+    
+
+
+
+
+
+
+
+
+
+
+
+
+/*deleted before*/
 .main{
     display: flex;
     width: 100%;
@@ -90,6 +251,7 @@ html body{
         margin: 0 auto;
         width: 100%;
         height: max-content;
+        padding-top: 90px;
         background-color: #f8f8f8;
         .main_content{
             display: flex;
@@ -468,3 +630,40 @@ i{
     width: 100%;
     margin: 0 auto;
 }
+/*@media all and (max-width: 1220px) {
+html body{
+        width: 1220px;
+        margin: 0 auto;
+        padding: 0;
+        margin: 0;
+    }
+    #wrapper{
+        width: 100%;
+        height: 100%;
+    }
+    .main{
+        width: 100%;
+    }
+    .main_container{
+        width: 100%;
+    }
+    .left{
+        width: 100%;
+        padding: 0;
+        float: left;
+    }
+    .right{
+        float: right;
+        background-color: #f8f8f8;
+    }
+    .build_container{
+        display: flex;
+        width: 100%;
+        margin: 0 auto;
+    }
+    .number_wrapper{
+        margin: 0 auto;
+        width: 100%;
+    }
+    
+}*/
