--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ html body {
 
 .wrapper {
   margin: 0 auto;
-  width: 1120px;
+  max-width: 1120px;
 }
 
 .header {
@@ -99,7 +99,7 @@ html body {
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  width: 1220px;
+  max-width: 1220px;
   height: 100px;
   background-color: white;
 }
@@ -115,6 +115,7 @@ html body {
   display: inline;
   list-style-type: none;
   margin: 15px;
+  text-align: center;
 }
 .header .container a {
   color: #787878;
@@ -138,6 +139,7 @@ header .header2 {
 
 .header2 {
   position: fixed;
+  display: none;
   width: 100%;
   top: 0;
   left: 0;
@@ -204,6 +206,9 @@ header .header2 {
   }
   .header {
     display: none;
+  }
+  .header2 {
+    display: block;
   }
   .header__body {
     height: 50px;
@@ -293,14 +298,11 @@ header .header2 {
 }
 .main .main_container .main_content {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  margin: 0 auto;
-  width: 1220px;
-  height: 665px;
-}
-.main .main_container .main_content .left {
-  width: 50%;
+  margin: 30px auto;
+  max-width: 1220px;
 }
 .main .main_container .main_content .left .course {
   font-family: "Open Sans";
@@ -322,10 +324,10 @@ header .header2 {
 }
 .main .main_container .main_content .right {
   padding-top: 60px;
-  width: 50%;
 }
 .main .main_container .main_content #feed form {
   height: 100%;
+  align-items: center;
   color: #787878;
   display: flex;
   flex-direction: column;
@@ -337,7 +339,8 @@ header .header2 {
 .main .main_container .main_content #feed form input {
   margin-bottom: 14px;
   border: solid 1px #787878;
-  width: 585px;
+  max-width: 385px;
+  width: 100%;
   border-radius: 10px;
   height: 37px;
   padding: 5px;
@@ -411,6 +414,18 @@ header .header2 {
   content: "*";
   color: red;
 }
+@media all and (max-width: 920px) {
+  .main .main_container .main_content {
+    justify-content: center;
+  }
+  .main .main_container .main_content .left,
+.main .main_container .main_content .right {
+    width: 100%;
+  }
+  .main .main_container .main_content .left .course {
+    margin-top: 0;
+  }
+}
 
 .build_container {
   width: 100%;
@@ -421,6 +436,7 @@ header .header2 {
 }
 .build_container .build_content {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
   padding: 30px 0;
@@ -515,17 +531,16 @@ header .header2 {
 
 .number_wrapper {
   width: 100%;
-  height: 310px;
   background-color: #3498db;
 }
 .number_wrapper .number_container {
+  max-width: 1120px;
+  margin: 15px auto;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin: 0 auto;
-  width: 1120px;
-  height: 310px;
 }
 .number_wrapper .number_container .num1 {
   display: flex;
@@ -583,7 +598,7 @@ header .header2 {
 
 .slider_content {
   margin: 0 auto;
-  width: 1120px;
+  max-width: 1120px;
 }
 
 .slider__item {
@@ -593,7 +608,22 @@ header .header2 {
   margin: 0 auto;
   display: block;
 }
+.slider__item .text {
+  text-align: center;
+  font-size: 16px;
+  color: #787878;
+  padding-left: 200px;
+  padding-right: 200px;
+}
 
+@media all and (max-width: 920px) {
+  .slider_container .slider__item {
+    padding: 0 15px;
+  }
+  .slider_container .slider__item .text {
+    padding: 0 15px;
+  }
+}
 .slick-dots {
   display: flex;
   justify-content: center;
@@ -643,7 +673,6 @@ header .header2 {
 .video_wrapper {
   width: 100%;
   display: flex;
-  height: 870px;
   background-color: #f8f8f8;
 }
 .video_wrapper .video_content {
@@ -651,8 +680,8 @@ header .header2 {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  width: 1120px;
-  height: 870px;
+  max-width: 1120px;
+  min-height: 870px;
   margin: 0 auto;
 }
 .video_wrapper .video_content .text h2 {
@@ -667,7 +696,9 @@ header .header2 {
   font-size: 16px;
 }
 .video_wrapper .video_content .video {
-  margin-top: -80px;
+  margin-top: 30px;
+  width: 100%;
+  height: 100%;
 }
 
 .map {
@@ -677,16 +708,17 @@ header .header2 {
 
 .wrapper_footer {
   width: 100%;
-  height: 200px;
   background-color: #3498db;
+  padding: 15px 0;
 }
 .wrapper_footer .footer_content {
   margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
   text-align: center;
-  width: 1120px;
+  max-width: 1120px;
 }
 
 i {
