--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,7 +39,7 @@ html body{
 }
 .wrapper {
     margin: 0 auto;
-    width: 1120px;
+    max-width: 1120px;
 }
 .header{
     width: 100%;
@@ -52,7 +52,7 @@ html body{
         display: flex;
         justify-content: space-between;
         margin: 0 auto;
-        width: 1220px;
+        max-width: 1220px;
         height: 100px;
         background-color: white;
         .logo{
@@ -66,7 +66,9 @@ html body{
         .menu li{
             display: inline;
             list-style-type: none;
-            margin: 15px;}
+            margin: 15px;
+            text-align: center;
+        }
         a{
             color: #787878;
         }
@@ -90,6 +92,7 @@ header .header2{
 }
 .header2{
     position: fixed;
+    display: none;
     width: 100%;
     top: 0;
     left: 0;
@@ -155,6 +158,9 @@ header .header2{
     }
     .header{
         display: none;
+    }
+    .header2 {
+        display: block;
     }
     .header__body{
         height: 50px;}
@@ -231,23 +237,11 @@ header .header2{
     }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
 /*deleted before*/
-.main{
+.main {
     display: flex;
     width: 100%;
-    .main_container{
+    .main_container {
         margin: 0 auto;
         width: 100%;
         height: max-content;
@@ -255,13 +249,12 @@ header .header2{
         background-color: #f8f8f8;
         .main_content{
             display: flex;
+            flex-wrap: wrap;
             flex-direction: row;
             justify-content: space-between;
-            margin: 0 auto;
-            width: 1220px;
-            height: 665px;
+            margin: 30px auto;
+            max-width: 1220px;
             .left{
-                width: 50%;
                 .course{
                     font-family: "Open Sans";
                     margin-top: 215px;
@@ -281,9 +274,10 @@ header .header2{
                 }}
             .right{
                 padding-top: 60px;
-                width: 50%;}
+            }
             #feed form {
                 height: 100%;
+                align-items: center;
                 color: #787878;
                 display: flex;
                 flex-direction: column;
@@ -294,7 +288,8 @@ header .header2{
             #feed form input{
                 margin-bottom: 14px;
                 border: solid 1px #787878;
-                width: 585px;
+                max-width: 385px;
+                width: 100%;
                 border-radius: 10px;
                 height: 37px;
                 padding: 5px;
@@ -358,7 +353,22 @@ header .header2{
             label:after{
                 content: '*';
                 color: red;
-            }}
+            }
+        }
+        @media all and (max-width: 920px) {
+            .main_content {
+                justify-content: center;
+                .left,
+                .right {
+                    width: 100%;
+                }
+                .left {
+                    .course {
+                        margin-top: 0;
+                    }
+                }
+            }
+        }
     }
 }
 .build_container{
@@ -369,6 +379,7 @@ header .header2{
     }
     .build_content{
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         justify-content:space-around;
         padding: 30px 0;
@@ -455,16 +466,16 @@ header .header2{
     }}
 .number_wrapper{
     width: 100%;
-    height: 310px;
     background-color: #3498db;
     .number_container{
+        max-width: 1120px;
+        margin: 15px auto;
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
-        margin: 0 auto;
-        width: 1120px;
-        height: 310px;
+       // height: 310px;
         .num1{
             display: flex;
             flex-direction: column;
@@ -515,19 +526,37 @@ header .header2{
         }}
 
 }
+#mobile-slider {
+
+}
 .slider_container{
     width: 100%;
     height: max-content;
 }
 .slider_content{
     margin: 0 auto;
-    width: 1120px;
+    max-width: 1120px;
 }
 .slider__item {
     width: 100%;
     img {
         margin: 0 auto;
         display: block;
+    }
+    .text {
+        text-align:center;
+        font-size: 16px; color: #787878;
+        padding-left: 200px; padding-right: 200px;
+    }
+}
+@media all and (max-width:920px) {
+    .slider_container{
+        .slider__item {
+            padding: 0 15px;
+            .text {
+                padding: 0 15px;
+            }
+        }
     }
 }
 
@@ -579,15 +608,15 @@ header .header2{
 .video_wrapper{
     width: 100%;
     display: flex;
-    height: 870px;
+    //height: 870px;
     background-color: #f8f8f8;
     .video_content{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-        width: 1120px;
-        height: 870px;
+        max-width: 1120px;
+        min-height: 870px;
         margin: 0 auto;
         .text h2{
             margin-bottom: 20px;
@@ -601,7 +630,9 @@ header .header2{
             font-size: 16px;
         }
         .video{
-            margin-top: -80px;
+            margin-top: 30px;
+            width: 100%;
+            height: 100%;
         }
     }
 }
@@ -611,15 +642,16 @@ header .header2{
 }
 .wrapper_footer{
     width: 100%;
-    height: 200px;
     background-color: #3498db;
+    padding: 15px 0;
     .footer_content{
         margin: 0 auto;
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: space-around;
         text-align: center;
-        width: 1120px;
+        max-width: 1120px;
 
     }}
 i{
