--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ header .header2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: red;
+  background-color: white;
   z-index: 2;
 }
 
@@ -179,6 +179,7 @@ header .header2 {
 }
 
 .header__burger {
+  background-color: #0b76ef;
   display: none;
 }
 
@@ -189,13 +190,13 @@ header .header2 {
 }
 
 .header__list li {
+  text-align: center;
   list-style: none;
   margin: 0px 0px 0px 20px;
 }
 
 .header__link {
   color: #fff;
-  text-transform: uppercase;
   font-size: 18px;
   text-decoration: none;
 }
@@ -271,6 +272,9 @@ header .header2 {
     background-color: #0b76ef;
     padding: 70px 10px 20px 10px;
   }
+  .header__menu {
+    background-color: white;
+  }
   .header__menu.active {
     top: 0;
   }
@@ -282,6 +286,7 @@ header .header2 {
   }
   .header__link {
     font-size: 24px;
+    color: #333333;
   }
 }
 /*deleted before*/
