--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,7 +105,7 @@ header .header2{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: red;
+    background-color: white;
     z-index: 2;
 }
 
@@ -131,6 +131,7 @@ header .header2{
 }
 
 .header__burger{
+    background-color: #0b76ef;
     display: none;
 }
 .header__menu{}
@@ -141,12 +142,12 @@ header .header2{
     z-index: 2;
 }
 .header__list li{
+    text-align: center;
     list-style: none;
     margin: 0px 0px 0px 20px;
 }
 .header__link{
     color: #fff;
-    text-transform: uppercase;
     font-size: 18px;
     text-decoration: none;
 }
@@ -222,7 +223,9 @@ header .header2{
         background-color: #0b76ef;
         padding: 70px 10px 20px 10px;
     }
-
+.header__menu{
+    background-color: white;
+}
     .header__menu.active{
         top: 0;
     }
@@ -234,6 +237,7 @@ header .header2{
     }
     .header__link{
         font-size: 24px;
+        color: #333333;
     }
 }
 
